--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Modelo Delivery - By DG</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
+<center>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (Sem Título-1) -->
 <table id="Tabela_01" width="1080" height="1920" border="0" cellpadding="0" cellspacing="0">
@@ -22,5 +23,6 @@
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
+</center>
 </body>
 </html>
